--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -42,7 +42,7 @@
 	
 	<h3>Some Background Information<h2>  	
 	<div class="background"><p>Hello, as you may not know already, my name is Taketo Chen, 
-and I am thirteen years old. This is the first website I have created, so please don&#39;t 
+and I am thirteen years old. This is the firstasd website I have created, so please don&#39;t 
 murder me. </p>
 	</div>
 	<h2 class="tips">Tips for Surviving School<h2>
