--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -3,55 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Taketo Chen&#39;s Website</title>
-<link rel
+   <link rel="stylesheet" type="text/css" href="../CSS/mystyle.css">
   </head>
-	<style>
-		h1 {
-		font-weight: bold;
-		text-align: center;
-		background-color: #D2E810;
-		}	
-		h3 {
-		color: blue;
-		font-family: sans-serif;
-		}
-		.tips {
-		position: auto;
-		}
-		.background {
-		color: black;
-		font-size: 17px;
-		background-color: yellow;
-		width: 300px;
-		height: 125px;
-		border: 8px ridge rgb(38, 38, 38);
-		}
-		p {
-		padding: 1%;
-		}
-`		.list {
-		font-size: 1em;
-		}
-		#links {
-		text-align: right;
-		padding: 10px;
-`		}
-	</style>
+	
   <body>
 		<h1>Welcome To My Website!</h1>	
 	
-	<h3>Some Background Information<h2>  	
+	<h3 class="bh3">Some Background Information<h2>  	
 	<div class="background"><p>Hello, as you may not know already, my name is Taketo Chen, 
-and I am thirteen years old. This is the firstasd website I have created, so please don&#39;t 
-murder me. </p>
+and I am thirteen years old. This is the first website I have created. As of now I am a student of San Gorgonio Middle School.</p>
 	</div>
-	<h2 class="tips">Tips for Surviving School<h2>
-	<div class="list"><ul class="tips">
-	<li>Try to stand out more, people will be more likely to notice you and want to become friends
-	<li>
-	</ul></div>
+	
 	<div id="links"><h2>Links</h2>
-	<p <a href="file:///C:/Users/TChen30177/Documents/Taketo_Chen_CS2016/html/resume.html"></a>Resume</p></div>
+	<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html">My Resume</a><br>
+	<a target"_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/">My School</a></div>
+	<h2 id="FF">Fun Facts About Me!</h3>
   </body>
 </html>
-../
