--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>Taketo Chen&#39;s Website</title>
-   <link rel="stylesheet" type="text/css" href="../CSS/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="../CSS/mystyle.css">
+    <link rel="icon" href="../img/japan-flag12.png"
   </head>
 	
   <body>
@@ -15,8 +16,15 @@ and I am thirteen years old. This is the first website I have created. As of now
 	</div>
 	
 	<div id="links"><h2>Links</h2>
-	<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html">My Resume</a><br>
-	<a target"_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/">My School</a></div>
-	<h2 id="FF">Fun Facts About Me!</h3>
+		<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html">My Resume</a><br>
+		<a target="_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/">My School</a></div>
+		<div class="logo"><img src="../img/SGMSlogo.gif" alt="A logo of my school" width="200px"></div>
+	<h2 id="FF">Fun Facts About Me!</h2>
+		<ul id="FFlist">
+			<li>I am trilingual.
+			<li>I am currently learning Spanish.
+			<li>I have been to four different countries.
+		</ul>
+<hr>
   </body>
 </html>
