--- a/Taketo_Chen_CS2016/html/website.html
+++ b/Taketo_Chen_CS2016/html/website.html
@@ -52,10 +52,14 @@ and I am thirteen years old. This is the first website I have created. As of now
 					<td>Pasta</td>
 				</tr>
 				<tr>
-					<td></td>
+					<td>Sushi</td>
+				</tr>
+				<tr>
+					<td>Ice Cream</td>
 				</tr>
 			</tbody>
 		</table>
 		</div>
+		
   </body>
 </html>
