--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -8,23 +8,99 @@
   </head>
 	
   <body>
-		<h1>Welcome To My Website!</h1>	
+		<h1 class="h1title">Welcome To My Website!</h1>	
 	
 	<h3 class="bh3">Some Background Information<h2>  	
 	<div class="background"><p>Hello, as you may not know already, my name is Taketo Chen, 
-and I am thirteen years old. This is the first website I have created. As of now I am a student of San Gorgonio Middle School.</p>
+and I am thirteen years old. This is the first website I have created. As of now I am a student of <em>San Gorgonio Middle School</em>. Our computer science teacher is Mr. Aguirre.</p>
 	</div>
 	
 	<div id="links"><h2>Links</h2>
-		<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html">My Resume</a><br>
-		<a target="_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/">My School</a></div>
+		<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html"><strong><em>My Resume</em></strong></a><br>
+		<a target="_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/"><strong><em>My School</em></strong></a><br>
+		<a target="_blank" href="http://mraguirre.com/"><strong><em>Mr. Aguirre&#39;s Website</em></strong></a><br>
+		<a target="_blank" href="https://github.com/taketochen2003"><strong><em>My Github Page</em></strong></a><br>
+		<a target="_blank" href="http://www.periodseven.org/index.html"><strong><em>Home Page</em></strong></a>
+		</div>
 		<div class="logo"><img src="../img/SGMSlogo.gif" alt="A logo of my school" width="200px"></div>
-	<h2 id="FF">Fun Facts About Me!</h2>
+		<h2 id="FF">Fun Facts About Me!</h2>
 		<ul id="FFlist">
-			<li>I am trilingual.
-			<li>I am currently learning Spanish.
-			<li>I have been to four different countries.
+			<li>I am trilingual.</li>
+			<li>I am currently learning Spanish.</li>
+			<li>I have been to four different countries.</li>
 		</ul>
-<hr>
+		<div class="owl"><h2>My Favorite People</h2>
+		<ul>
+			<li><strong>Mr. Aguirre</strong> (Teacher)
+			<li><strong>Cade Tallman</strong> (Best Friend)
+			<li><strong>My Parents</strong>
+			
+		</ul></div>
+			<hr>
+		<div id=foods>
+		<h2>My Favorite Foods</h2>
+		<table>
+			<thead>
+				<tr>
+					<th>Junk Food</th>
+					<th>Normal</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>Pizza</td>
+					<td>Pasta</td>
+				</tr>
+				<tr>
+					<td>Ice Cream</td>
+					<td>Sushi</td>
+				</tr>
+			</tbody>
+		</table>
+		</div>
+		<div class="foodli">
+		<h5>Favorite Foods Ordered</h5>
+		<ol>
+		<li>Pasta</li>
+		<li>Sushi</li>
+		<li>Ice Cream</li>
+		<li>Pizza</li>
+		</ol>
+		</div>
+		<img class="pizza" src="../img/Pizza.jpg" alt="A picture of pizza" width="200px">
+		<img class="pasta" src="../img/pasta-9.jpg" alt="A picture of pasta" width="200px">
+		<img class="sushi" src="../img/sushi.jpg" alt="A picture of sushi" width="200px">
+		<img class="icecream" src="../img/ice_cream.jpg" alt="A picture of ice cream" width="100px">
+		<div id=hr2>
+			<hr>
+		<div
+		<div class="pets">
+		<h3 id=petsh>My Pets</h3>
+		<table>
+			<thead>
+				<tr>
+					<th>My Turtle</th>
+					<th>My Hen</th>
+					<th>My Frog(Deceased)</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td><img src="../img/box-turtle.jpg" alt="a picture of my turtle" width="200px"</td>
+					<td><img src="../img/Chickenidiot.jpg" alt="a picture of my hen" width="200px"</td>
+					<td><img src="../img/frog.jpg" alt="A picture of my frog" width="200px"</td>
+				</tr>
+				
+			</tbody>
+		<div class="favpet">
+		<h4>My Top 3 Favorite Pets</h4>
+		<ol>
+			<li>Turtle</li>
+			<li>Hen</li>
+			<li>Frogs</li>
+		</ol>
+		</div>
+		
+			
   </body>
 </html>
