--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -12,7 +12,7 @@
 	
 	<h3 class="bh3">Some Background Information<h2>  	
 	<div class="background"><p>Hello, as you may not know already, my name is Taketo Chen, 
-and I am thirteen years old. This is the first website I have created. As of now I am a student of <em>San Gorgonio Middle School</em>. Our computer science teacher is Mr. Aguirre.</p>
+and I am thirteen years old. This is the first website I have created. As of now I am a student of <em>San Gorgonio Middle School</em>. Our computer science teacher is <strong>Mr. Aguirre</strong>.</p>
 	</div>
 	
 	<div id="links"><h2>Links</h2>
@@ -73,7 +73,6 @@ and I am thirteen years old. This is the first website I have created. As of now
 		<img class="icecream" src="../img/ice_cream.jpg" alt="A picture of ice cream" width="100px">
 		<div id=hr2>
 			<hr>
-		<div
 		<div class="pets">
 		<h3 id=petsh>My Pets</h3>
 		<table>
