--- a/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
+++ b/TaketoChen2003/Taketo_Chen_CS2016/html/website.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <title>Taketo Chen&#39;s Website</title>
     <link rel="stylesheet" type="text/css" href="../CSS/mystyle.css">
-    <link rel="icon" href="../img/japan-flag12.png"
+    <link rel="icon" href="../img/japan-flag12.png">
   </head>
 	
   <body>
 		<h1 class="h1title">Welcome To My Website!</h1>	
 	
-	<h3 class="bh3">Some Background Information<h2>  	
+	<h3 class="bh3">Some Background Information</h3>  	
 	<div class="background"><p>Hello, as you may not know already, my name is Taketo Chen, 
-and I am thirteen years old. This is the first website I have created. As of now I am a student of <em>San Gorgonio Middle School</em>. Our computer science teacher is <strong>Mr. Aguirre</strong>.</p>
+and I am thirteen years old. This is the first website I have created. As of now I am a student of <em>San Gorgonio Middle School</em>. Our computer science teacher is Mr. Aguirre.</p>
 	</div>
 	
 	<div id="links"><h2>Links</h2>
-		<a target="_blank" href="file:///C:/Users/TChen30177/Documents/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html"><strong><em>My Resume</em></strong></a><br>
+		<a target="_blank" href="file:///F:/periodseven.org/Students/TaketoChen2003/Taketo_Chen_CS2016/html/resume.html"><strong><em>My Resume</em></strong></a><br>
 		<a target="_blank" href="https://sangorgonio-beaumont-ca.schoolloop.com/"><strong><em>My School</em></strong></a><br>
 		<a target="_blank" href="http://mraguirre.com/"><strong><em>Mr. Aguirre&#39;s Website</em></strong></a><br>
 		<a target="_blank" href="https://github.com/taketochen2003"><strong><em>My Github Page</em></strong></a><br>
 		<a target="_blank" href="http://www.periodseven.org/index.html"><strong><em>Home Page</em></strong></a>
 		</div>
-		<div class="logo"><img src="../img/SGMSlogo.gif" alt="A logo of my school" width="200px"></div>
+		<div class="logo"> <img src="../img/SGMSlogo.gif" alt="A logo of my school" width="200"> </div>
 		<h2 id="FF">Fun Facts About Me!</h2>
 		<ul id="FFlist">
 			<li>I am trilingual.</li>
@@ -67,14 +67,15 @@ and I am thirteen years old. This is the first website I have created. As of now
 		<li>Pizza</li>
 		</ol>
 		</div>
-		<img class="pizza" src="../img/Pizza.jpg" alt="A picture of pizza" width="200px">
-		<img class="pasta" src="../img/pasta-9.jpg" alt="A picture of pasta" width="200px">
-		<img class="sushi" src="../img/sushi.jpg" alt="A picture of sushi" width="200px">
-		<img class="icecream" src="../img/ice_cream.jpg" alt="A picture of ice cream" width="100px">
+		<img class="pizza" src="../img/Pizza.jpg" alt="A picture of pizza" width="200">
+		<img class="pasta" src="../img/pasta-9.jpg" alt="A picture of pasta" width="200">
+		<img class="sushi" src="../img/sushi.jpg" alt="A picture of sushi" width="200">
+		<img class="icecream" src="../img/ice_cream.jpg" alt="A picture of ice cream" width="100">
 		<div id=hr2>
 			<hr>
+		</div>
+		<h3 id="petsh">My Pets</h3>
 		<div class="pets">
-		<h3 id=petsh>My Pets</h3>
 		<table>
 			<thead>
 				<tr>
@@ -85,12 +86,14 @@ and I am thirteen years old. This is the first website I have created. As of now
 			</thead>
 			<tbody>
 				<tr>
-					<td><img src="../img/box-turtle.jpg" alt="a picture of my turtle" width="200px"</td>
-					<td><img src="../img/Chickenidiot.jpg" alt="a picture of my hen" width="200px"</td>
-					<td><img src="../img/frog.jpg" alt="A picture of my frog" width="200px"</td>
+					<td> <img src="../img/box-turtle.jpg" alt="a picture of my turtle" width="200"> </td>
+					<td> <img src="../img/Chickenidiot.jpg" alt="a picture of my hen" width="200"> </td>
+					<td> <img src="../img/frog.jpg" alt="A picture of my frog" width="200"> </td>
 				</tr>
 				
 			</tbody>
+		</table>
+		</div>
 		<div class="favpet">
 		<h4>My Top 3 Favorite Pets</h4>
 		<ol>
